--- a/New Website/contactus.html
+++ b/New Website/contactus.html
@@ -11,7 +11,7 @@
     <!-- Fonts -->
 </head>
 <body>
-        <!--Navbar -->
+<!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-light bg-white sticky-top" id="navbar">
     <a class="navbar-brand textFormatting" href="#"><h2><b>Resumely</b></h2></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
@@ -28,11 +28,11 @@
         <li class="hvr nav-item lrSpacing" style="max-width: 88.7833px; max-height: 58px;">
           <a class="nav-link spacing fontColor textFormatting" href="#" ><h5> Resume</h5></a>
         </li>
-        <li class="hvr nav-item lrSpacing" style="max-width: 110.2830px; max-height: 58px;">
-          <a class="nav-link spacing fontColor textFormatting" href="#" ><h5>Templates</h5></a>
+        <li class="hvr nav-item lrSpacing" style="max-width: 102.5170px; max-height: 58px;">
+          <a class="nav-link spacing fontColor textFormatting" href="#" ><h5>Feedback</h5></a>
         </li>
-        <li class="hvr nav-item lrSpacing" style="max-width: 90px; max-height: 58px;">
-            <a class="nav-link spacing fontColor textFormatting" href="#" ><h5>Reviews</h5></a>
+        <li class="hvr nav-item lrSpacing" style="max-width: 87.2667px; max-height: 58px;">
+            <a class="nav-link spacing fontColor textFormatting" href="#" ><h5>Support</h5></a>
           </li>          
       </ul>
       <div class="search">
